--- a/ProjectSite/index.html
+++ b/ProjectSite/index.html
@@ -25,6 +25,8 @@ body {
 	<div style="text-align:center">
 		<a href=".\data\redirects\fei\index.html">Foxy's Extreme Imaging</a>
 	<div>
+	<p>Meme of the week:</p>
+	<img src=".\data\memes\1.jpg">
 </body>
 <!-- so you found a secret? nice try! -->
 </html>
