--- a/ProjectSite/index.html
+++ b/ProjectSite/index.html
@@ -7,9 +7,10 @@ body {
 }
 </style>
 <head>
-  <title>ProFoxyfy's Projects</title>
+	<link rel="shortcut icon" href=".\data\favicons\favicon.ico" />
+ 	<title>ProFoxyfy's Projects</title>
 </head>
-<body style="background-color:#1c87c9;">
+<body>
 	<h2 align="center">>ProFoxyfy's Projects!<</h2>
 	<p style="text-align:center">just some projects.<p>
 	<p>ㅤ</p>
@@ -26,6 +27,9 @@ body {
 		<a href=".\data\redirects\fei\index.html">Foxy's Extreme Imaging</a>
 	<div>
 	<p>ㅤ</p>
+	<div style="text-align:center">
+		<a href=".\data\indexes\updates\index.html">View Update File(s)</a>
+	<div>
 	<p>ㅤ</p>
 	<p>ㅤ</p>
 	<p>ㅤ</p>
