--- a/ProjectSite/data/redirects/fei/index.html
+++ b/ProjectSite/data/redirects/fei/index.html
@@ -5,14 +5,56 @@
 body {
     font-family: 'Roboto';font-size: 22px;
 }
+/* Style buttons */
+.btn {
+  background-color: DodgerBlue;
+  border: none;
+  color: white;
+  padding: 12px 30px;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+/* Darker background on mouse-over */
+.btn:hover {
+  background-color: RoyalBlue;
+}
+a:link {
+  color: white;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:visited {
+  color: white;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:hover {
+  color: white;
+  background-color: transparent;
+  text-decoration: underline;
+}
+
+a:active {
+  color: white;
+  background-color: transparent;
+  text-decoration: underline;
+}
 </style>
 <head>
   <title>ProFoxyfy's Projects - Foxy's Extreme Imaging</title>
 </head>
 <body>
+	<!-- Add icon library -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+	<!-- Auto width -->
+
 	<h2 align="center">>Foxy's Extreme Imaging<</h2>
 	<div style="text-align:center">
-		<a href="https://github.com/ProFoxyfy/Foxy-s-Extreme-Imaging">Click here to Download! (GitHub)</a>
+		<button class="btn"><a href="https://github.com/ProFoxyfy/Foxy-s-Extreme-Imaging"</a><i class="fa fa-download"></i> Download</button>
 	<div>
 </body>
 </html>
